@@ -1,3 +1,5 @@
+* Add resources method to ModelStorage
+
 Version 5.0.2 - 2018-12-02
 * Bug fixes (see mercurial logs for details)
 
